Update with the style.css corrections in adjusting the top and left alignment of social media icons

--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ ul {
 }
 
 .social-media-icons {
-  margin-top: -32px;
+  margin-top: -19px;
 }
 
 .titlerecent {
@@ -811,7 +811,7 @@ textarea {
   }
 
   .downarrow {
-    margin-top: 53px;
+    margin-top: 63px;
     position: absolute;
     left: 164px;
   }
